--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                                         <li><a href="09-service-details.html">Servicio Detalle</a></li>
                                     </ul>
                                 </li>
-                                <li class="list-inline-item"><a>Nosotros <i class="fa fa-angle-down"></i></a>
+                                <li class="list-inline-item"><a>NOSOTROS <i class="fa fa-angle-down"></i></a>
                                     <ul class="dropdown list-unstyled">
                                         <li><a href="05-about-us.html">nosotros </a></li>
                                         <li><a>Department <i class="fa fa-angle-right"></i></a>
