--- a/10-gallery-one.html
+++ b/10-gallery-one.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>MediSeba - Medical & Healthcare Template</title>
+        <title>SALUD OCUPACIONAL</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -125,164 +125,66 @@
                     <div class="col-md-9">
                         <div class="main-menu text-right">
                             <ul class="list-unstyled list-inline">
-                                <li class="list-inline-item">
-                                    <a>HOME <i class="fa fa-angle-down"></i></a>
+                                <li class="list-inline-item active"><a>INICIO <i class="fa fa-angle-down"></i></a>
                                     <ul class="dropdown list-unstyled">
-                                        <li><a href="index.html">Home Style 1</a></li>
+                                        <li class="active"><a href="index.html">Home Style 1</a></li>
                                         <li><a href="index2.html">Home Style 2</a></li>
                                         <li><a href="index3.html">Home Style 3</a></li>
                                         <li><a href="index4.html">Home Style 4</a></li>
                                     </ul>
                                 </li>
-                                <li class="list-inline-item">
-                                    <a>SERVICE <i class="fa fa-angle-down"></i></a>
+                                <li class="list-inline-item"><a>SERVICIOS <i class="fa fa-angle-down"></i></a>
                                     <ul class="dropdown list-unstyled">
-                                        <li><a href="06-service-one.html">Service Style 1</a></li>
-                                        <li><a href="07-service-two.html">Service Style 2</a></li>
-                                        <li><a href="08-service-three.html">Service Style 3</a></li>
-                                        <li><a href="09-service-details.html">Service Details</a></li>
+                                        <li><a href="06-service-one.html">Servicio 1</a></li>
+                                        <li><a href="09-service-details.html">Servicio Detalle</a></li>
                                     </ul>
                                 </li>
-                                <li class="list-inline-item active"><a>PAGES <i class="fa fa-angle-down"></i></a>
+                                <li class="list-inline-item"><a>NOSOTROS <i class="fa fa-angle-down"></i></a>
                                     <ul class="dropdown list-unstyled">
-                                        <li><a href="05-about-us.html">About Us</a></li>
-                                        <li>
-                                            <a>Department <i class="fa fa-angle-right"></i></a>
+                                        <li><a href="05-about-us.html">nosotros </a></li>
+                                        <li><a>Department <i class="fa fa-angle-right"></i></a>
                                             <ul class="dropdown2 list-unstyled">
-                                                <li><a href="12-department-one.html">Department Style 1</a></li>
-                                                <li><a href="13-department-two.html">Department Style 2</a></li>
-                                                <li><a href="14-department-details.html">Department Details</a></li>
+                                                <li><a href="12-department-one.html">Departmento 1</a></li>
+                                                <li><a href="13-department-two.html">Departmento 2</a></li>
+                                                <li><a href="14-department-details.html">Departmento Detalle</a></li>
                                             </ul>
                                         </li>
                                         <li><a>Doctors <i class="fa fa-angle-right"></i></a>
                                             <ul class="dropdown2 list-unstyled">
-                                                <li><a href="15-doctors-one.html">Doctors Style 1</a></li>
-                                                <li><a href="16-doctors-two.html">Doctors Style 2</a></li>
-                                                <li><a href="17-doctor-details.html">Doctors Details</a></li>
+                                                <li><a href="15-doctors-one.html">Doctor 1</a></li>
+                                                <li><a href="16-doctors-two.html">Doctor 2</a></li>
+                                                <li><a href="17-doctor-details.html">Doctors Detalle</a></li>
                                             </ul>
                                         </li>
-                                        <li><a href="18-appointment.html">Appointment</a></li>
-                                        <li class="active">
-                                            <a>Gallery <i class="fa fa-angle-right"></i></a>
+                                        <li><a href="18-appointment.html">galeria</a></li>
+                                        <li><a>Gallery <i class="fa fa-angle-right"></i></a>
                                             <ul class="dropdown2 list-unstyled">
-                                                <li class="active"><a href="10-gallery-one.html">Gallery Style 1</a></li>
-                                                <li><a href="11-gallery-two.html">Gallery Style 2</a></li>
+                                                <li><a href="10-gallery-one.html">Galleria 1</a></li>
+                                                <li><a href="11-gallery-two.html">Galleria 2</a></li>
                                             </ul>
                                         </li>
-                                        <li><a href="19-pricing.html">Pricing</a></li>
-                                        <li><a href="22-404.html">404</a></li>
-                                        <li><a>Faq <i class="fa fa-angle-right"></i></a>
-                                            <ul class="dropdown2 list-unstyled">
-                                                <li><a href="20-faq-one.html">Faq Style 1</a></li>
-                                                <li><a href="21-faq-two.html">Faq Style 2</a></li>
-                                            </ul>
-                                        </li>
-                                        <li><a href="23-coming-soon.html">Coming Soon</a></li>
+                                        <li><a href="19-pricing.html">Costos</a></li>
                                     </ul>
                                 </li>
                                 <li class="list-inline-item"><a>BLOG <i class="fa fa-angle-down"></i></a>
                                     <ul class="dropdown list-unstyled">
-                                        <li><a href="27-blog-one.html">Blog Style 1</a></li>
-                                        <li><a href="28-blog-two.html">Blog Style 2</a></li>
-                                        <li><a href="29-blog-three.html">Blog Style 3</a></li>
-                                        <li><a href="30-blog-sidebar-one.html">Blog With Sidebar 1</a></li>
-                                        <li><a href="31-blog-sidebar-two.html">Blog With Sidebar 2</a></li>
-                                        <li><a href="32-blog-sidebar-three.html">Blog With Sidebar 3</a></li>
-                                        <li><a href="33-blog-details.html">Blog Details</a></li>
+                                        <li><a href="27-blog-one.html">Blog 1</a></li>
+                                        <li><a href="28-blog-two.html">Blog 2</a></li>
+                                        <li><a href="29-blog-three.html">Blog 3</a></li>
+                                        <li><a href="30-blog-sidebar-one.html">Blog detalle 1</a></li>
+                                        <li><a href="31-blog-sidebar-two.html">Blog detalle 2</a></li>
+                                        <li><a href="32-blog-sidebar-three.html">Blog detalle 3</a></li>
+                                        <li><a href="33-blog-details.html">Blog Detalle</a></li>
                                     </ul>
                                 </li>
-                                <li class="list-inline-item"><a>CONTACT <i class="fa fa-angle-down"></i></a>
+                                <li class="list-inline-item"><a>CONTACTOS <i class="fa fa-angle-down"></i></a>
                                     <ul class="dropdown list-unstyled">
-                                        <li><a href="24-contact-one.html">Contact Style 1</a></li>
-                                        <li><a href="25-contact-two.html">Contact Style 2</a></li>
-                                        <li><a href="26-contact-three.html">Contact Style 3</a></li>
+                                        <li><a href="24-contact-one.html">Contacto 1</a></li>
+                                        <li><a href="25-contact-two.html">Contacto 2</a></li>
+                                        <li><a href="26-contact-three.html">Contacto 3</a></li>
                                     </ul>
                                 </li>
-                                <li class="list-inline-item mega-menu"><a>MEGA MENU <i class="fa fa-angle-down"></i></a>
-                                    <div class="mega-box">
-                                        <div class="row">
-                                            <div class="col-md-3">
-                                                <div class="q-link">
-                                                    <h6>Quick LInks</h6>
-                                                    <div class="link-box">
-                                                        <a href="">Generel Information</a>
-                                                        <a href="">Blood Bank</a>
-                                                        <a href="">Medical Research</a>
-                                                        <a href="">Emergency Service</a>
-                                                        <a href="">Ambulance Service</a>
-                                                        <a href="">Payment Methode</a>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="col-md-3">
-                                                <div class="lt-news">
-                                                    <h6>Latest News</h6>
-                                                    <div class="news-box d-flex">
-                                                        <div class="news-img">
-                                                            <img src="images/mega-img-1.jpg" alt="">
-                                                        </div>
-                                                        <div class="news-con">
-                                                            <p>Lorem ipsum dolor sit amet.</p>
-                                                            <span>Mar 22, 2018</span>
-                                                        </div>
-                                                    </div>
-                                                    <div class="news-box d-flex">
-                                                        <div class="news-img">
-                                                            <img src="images/mega-img-2.jpg" alt="">
-                                                        </div>
-                                                        <div class="news-con">
-                                                            <p>Lorem ipsum dolor sit amet.</p>
-                                                            <span>Mar 22, 2018</span>
-                                                        </div>
-                                                    </div>
-                                                    <div class="news-box d-flex">
-                                                        <div class="news-img">
-                                                            <img src="images/mega-img-5.jpg" alt="">
-                                                        </div>
-                                                        <div class="news-con">
-                                                            <p>Lorem ipsum dolor sit amet.</p>
-                                                            <span>Mar 22, 2018</span>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="col-md-3">
-                                                <div class="m-dept">
-                                                    <h6>Departments</h6>
-                                                    <div class="dept-box">
-                                                        <a href="">General Medicine</a>
-                                                        <a href="">Cardiology</a>
-                                                        <a href="">Gastrology</a>
-                                                        <a href="">Neurology</a>
-                                                        <a href="">Dental Care</a>
-                                                        <a href="">Child Care</a>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="col-md-3">
-                                                <div class="m-doc">
-                                                    <h6>Our Doctors</h6>
-                                                    <div class="m-slider owl-carousel">
-                                                        <div class="slider-item">
-                                                            <img src="images/m-doc-1.png" alt="" class="img-fluid">
-                                                            <p>Dr. David White</p>
-                                                        </div>
-                                                        <div class="slider-item">
-                                                            <img src="images/m-doc-2.png" alt="" class="img-fluid">
-                                                            <p>Dr. Sunita Patel</p>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li class="list-inline-item msearch-bar">
-                                    <form action="#">
-                                        <input type="text" name="search" placeholder="Search Here">
-                                        <button type="submit"><i class="fa fa-search"></i></button>
-                                    </form>
-                                </li>
+                             
                             </ul>
                         </div>
                     </div>
@@ -290,6 +192,7 @@
             </div>
         </section>
         <!-- End Logo Area -->
+
 
         <!-- Mobile Menu -->
         <section class="mobile-menu-area">
